package woowacourse.kanban.domain.task

enum class TaskStatus {
    TO_DO,
    IN_PROGRESS,
    REVIEW,
    DONE,
}
